# augur

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_EN.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/tasks/task-10-review-fix-loops/: context.json  task.json
.agents/tasks/task-dashboard-report-polish/: context.json  task.json
.agents/tasks/task-deep-report-generation/: 2025-05-30-review-v1.md  context.json  task.json
.agents/tasks/task-iteration-11-14-polish/: 2025-01-review-v1.md  context.json  task.json
.agents/tasks/task-iteration1-review-fix/: 2025-07-23-review-v1.md  context.json  task.json
.agents/tasks/task-iteration2-hardening/: 2025-07-24-review-v1.md  context.json  task.json
.agents/tasks/task-iteration3-dashboard-bots-perf/: 2025-07-24-review-v1.md  context.json  task.json
.agents/tasks/task-iteration4-backtest-cli-docker-docs/: 2025-07-25-review-v1.md  context.json  task.json
.agents/tasks/task-iteration5-soul-scanner-cron-quality/: 2025-07-25-review-v1.md  context.json  task.json
.agents/tasks/task-iteration6-e2e-ux-performance/: 2025-07-25-review-v1.md  context.json  task.json
.agents/tasks/task-iteration7-ux-polish/: 2025-07-25-review-v1.md  context.json  task.json
.agents/tasks/task-iteration8-logic-dashboard-css/: 2025-07-25-review-v1.md  context.json  (+1 more)
config/: agents.yaml
dashboard/: app.py
dashboard/templates/: backtest.html  base.html  create_persona.html  index.html  personas.html  portfolio.html  report_view.html  scanner.html  settings.html  signals.html  stocks.html  watchlist.html
docs/: CHANGELOG.md  agent-integration-guide-en.md  agent-integration-guide.md  api-reference.md  architecture-diagram.html  data-sources-en.md  hermes-setup-guide-en.md  hermes-setup-guide.md  hermes-web-ui-integration.md  single-persona-integration.md
personas/: serenity.md  thiel.md
scanner/: __init__.py  persona_loader.py
scanner/personas/: __init__.py  arps.py  aschenbrenner.py  base.py  buffett.py  cathie_wood.py  dalio.py  dan_bin.py  dayu.py  duan_yongping.py  fisher.py  graham.py  li_lu.py  lynch.py  marks.py  munger.py  registry.py  serenity.py  soros.py  thiel.py  zhang_lei.py
scripts/: sec_holdings.py
skills/arps/: SKILL.md
skills/aschenbrenner/: SKILL.md
skills/buffett/: SKILL.md
skills/cathie_wood/: SKILL.md
skills/dalio/: SKILL.md
skills/dan_bin/: SKILL.md
skills/dayu/: SKILL.md
skills/duan_yongping/: SKILL.md
skills/fisher/: SKILL.md
skills/graham/: SKILL.md
skills/li_lu/: SKILL.md
skills/lynch/: SKILL.md
skills/marks/: SKILL.md
skills/munger/: SKILL.md
skills/serenity/: SKILL.md
skills/soros/: SKILL.md
skills/thiel/: SKILL.md
skills/zhang_lei/: SKILL.md
src/augur/: __init__.py  api.py  backtest.py  cli.py  cli_format.py  config.py  coordinator.py  cron.py  data.py  errors.py  mcp_server.py  optional_deps.py  persona_loader.py  registry.py  report.py  soul.py
src/augur_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_backtest.py  test_cli.py  test_cron.py  test_dashboard_errors.py  test_data.py  test_data_pipeline.py  test_datasources.py  test_e2e_pipeline.py  test_imports.py  test_iteration11.py  test_iteration2.py  test_iteration3.py  test_iteration4.py  test_iteration5.py  test_iteration7.py  test_iteration8.py  test_iteration9.py  test_registry.py  test_report.py  test_soul.py
(+140 files in other folders)
