[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augur-agents"
version = "0.1.0"
description = "Multi-agent investment analysis system with 17 investor persona agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=20.0",
]
slack = [
    "slack-bolt>=1.18.0",
]
wechat = [
    "wechatpy>=2.0.0",
    "cryptography>=3.0",
]
lark = [
    "lark-oapi>=1.0.0",
]
cron = [
    "apscheduler>=3.10.0",
]
mcp = [
    "mcp>=1.0.0;python_version>='3.10'",
]
dev = [
    "pytest>=7.0",
]
all = [
    "python-telegram-bot>=20.0",
    "slack-bolt>=1.18.0",
    "wechatpy>=2.0.0",
    "cryptography>=3.0",
    "lark-oapi>=1.0.0",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0;python_version>='3.10'",
]

[project.scripts]
augur = "augur.cli:main"

[project.entry-points."mcp"]
augur-agents = "augur.mcp_server:create_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
augur = ["py.typed"]
