[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augur-agents"
version = "6.0.0"
description = "Multi-agent investment analysis system with 18 investor persona agents, consensus mechanism, and multi-platform deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["investment", "multi-agent", "stock-analysis", "ai", "personas", "consensus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
]
telegram = [
    "python-telegram-bot>=20.0",
]
slack = [
    "slack-bolt>=1.18.0",
]
wechat = [
    "gewechat-client>=0.1.0",
    "requests>=2.28.0",
]
lark = [
    "lark-oapi>=1.0.0",
]
cron = [
    "apscheduler>=3.10.0",
]
mcp = [
    "mcp>=1.0.0;python_version>='3.10'",
]
dev = [
    "pytest>=7.0",
]
all = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
    "python-telegram-bot>=20.0",
    "slack-bolt>=1.18.0",
    "gewechat-client>=0.1.0",
    "requests>=2.28.0",
    "lark-oapi>=1.0.0",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0;python_version>='3.10'",
]

[project.scripts]
augur = "augur.cli:main"

[project.urls]
Homepage = "https://github.com/BruceLanLan/augur"
Repository = "https://github.com/BruceLanLan/augur"
Documentation = "https://github.com/BruceLanLan/augur#readme"

[project.entry-points."mcp"]
augur-agents = "augur.mcp_server:create_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
augur = ["py.typed"]
